--- a/src/Components/Button/style.scss
+++ b/src/Components/Button/style.scss
@@ -1,7 +1,8 @@
 .button{
     border: none;
     border-radius: .2em;
-    background: #777;
+    background: #518ed0;
+    color: #fff;
     cursor: pointer;
     outline: none;
     font-size: 1.1rem;
