--- a/src/Components/QrResult/style.scss
+++ b/src/Components/QrResult/style.scss
@@ -3,10 +3,12 @@
     &__toolbar{
         width: 100%;
         padding: 15px;
-        border-bottom: 1px solid black;
+        color: #fff;
+        // background: #518ed0;
+        // box-shadow: 0 3px 6px rgba(0,0,0,.16), 0 3px 6px rgba(0,0,0,.23);
     }
     &__link-line{
-        background-color: gray ;
+        background-color: #fff ;
         padding: 10px;
         width: 100%;
         a{
