--- a/src/Components/Title/style.scss
+++ b/src/Components/Title/style.scss
@@ -1,12 +1,14 @@
-.title{
-    font-size: 2rem;
-    &--left{
-        text-align: left;
-    }
-    &--right{
-        text-align: right;
-    }
-    &--center{
-        text-align: center;
-    }
+.title {
+  font-size: 2rem;
+  margin: 0;
+  padding: 20px  0;
+  &--left {
+    text-align: left;
+  }
+  &--right {
+    text-align: right;
+  }
+  &--center {
+    text-align: center;
+  }
 }
