--- a/src/Components/ButtonOpenLink/style.scss
+++ b/src/Components/ButtonOpenLink/style.scss
@@ -11,9 +11,10 @@
     color: $white;
     cursor: pointer;
     outline: none;
+    box-sizing: border-box;
     font-size: 1.1rem;
-    height: 3em;
     text-decoration: none;
+    font-weight: 500;
     transition: background 300ms ease-in-out ;
     svg{
         fill: $white;
