--- a/src/Components/QrResult/style.scss
+++ b/src/Components/QrResult/style.scss
@@ -7,8 +7,8 @@
         width: 100%;
         padding: 15px;
         color: $white;
-        // background: #518ed0;
-        // box-shadow: 0 3px 6px rgba(0,0,0,.16), 0 3px 6px rgba(0,0,0,.23);
+        display: flex;
+        justify-content: space-between;
     }
     &__link-line{
         background-color: $white;
