--- a/src/Components/WarningContent/style.scss
+++ b/src/Components/WarningContent/style.scss
@@ -8,6 +8,7 @@
     justify-content: center;
     flex-direction: column;
     font-size: 2rem;
+    padding: 20px;
     text-align: center;
     &__container{
         width: 50%;
