--- a/src/Components/QrResult/style.scss
+++ b/src/Components/QrResult/style.scss
@@ -15,6 +15,8 @@
         padding: 15px;
         width: 100%;
         margin-bottom: 15px;
+        font-weight: 700;
+
         a{
             color: $black;
             text-decoration: none;
