--- a/src/Components/Message/style.scss
+++ b/src/Components/Message/style.scss
@@ -13,4 +13,12 @@
  text-align: center;
  font-size: 24px;
 font-weight: 500;
+&--hide{
+    transform: translateX(0);
+    transition: all 300ms ease-in-out;
+}
+&--visible{
+    transform: translateY(256px);
+    transition: all 300ms ease-in-out;
+}
 }
