--- a/src/Components/Button/style.scss
+++ b/src/Components/Button/style.scss
@@ -1,18 +1,6 @@
 @import '../../colors.scss';
-
+@import '../../mixins.scss';
 
 .button{
-    border: none;
-    border-radius: .2em;
-    background-color: $blue;
-    color: $white;
-    cursor: pointer;
-    outline: none;
-    font-size: 1.1rem;
-    height: 3em;
-    display: block;
-    transition: background 300ms ease-in-out;
-    &:hover{
-        background-color:$light__blue;
-    }
+    @include default-button;
 }
