--- a/src/Pages/PageQuestions/style.scss
+++ b/src/Pages/PageQuestions/style.scss
@@ -1,4 +1,7 @@
 .page-questions{
     height: 100%;
-    overflow: scroll;
+    &__wrap{
+        overflow-y: scroll;
+        height: 100%;
+    }
 }
