--- a/src/Components/Questionnaire/style.scss
+++ b/src/Components/Questionnaire/style.scss
@@ -9,10 +9,17 @@
     .sv_main{
         font-size: 20px;
     .sv_body{
-        border-top: 2px solid $dark__blue;
+        border-top: 2px solid $blue;
     }
 }
     .sv_main input[type="button"]{
         @include default-button
+    }
+    .sv_main .sv_q_rating_item.active .sv_q_rating_item_text{
+        background-color: $blue;
+        &:hover{
+            border: 1px solid $blue;
+
+        }
     }
 }
