--- a/src/Pages/Qr-page/style.scss
+++ b/src/Pages/Qr-page/style.scss
@@ -1,9 +1,6 @@
-@import '../../colors.scss';
+@import "../../colors.scss";
 
-
-.page-qr{
-    height: 100%;
-    background: $gray;
-
+.page-qr {
+  height: 100%;
+  background: $gray;
 }
-
