--- a/src/Components/Message/style.scss
+++ b/src/Components/Message/style.scss
@@ -1,24 +1,22 @@
-@import '../../colors.scss';
+@import "../../colors.scss";
 
-
-
-.message{
- position: absolute;
- background: $red;
- width: 100%;
- padding: 40px;
- bottom: 0;
- z-index: 2;   
- color: $white;
- text-align: center;
- font-size: 24px;
-font-weight: 500;
-&--hide{
+.message {
+  position: absolute;
+  background: $red;
+  width: 100%;
+  padding: 40px;
+  bottom: 0;
+  z-index: 2;
+  color: $white;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 500;
+  &--hide {
     transform: translateX(0);
     transition: all 300ms ease-in-out;
-}
-&--visible{
+  }
+  &--visible {
     transform: translateY(256px);
     transition: all 300ms ease-in-out;
-}
+  }
 }
