--- a/src/Pages/PageQuiz/style.scss
+++ b/src/Pages/PageQuiz/style.scss
@@ -4,4 +4,11 @@
     overflow-y: scroll;
     height: 100%;
   }
+  &__loader{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+  }
 }
