--- a/src/colors.scss
+++ b/src/colors.scss
@@ -1,19 +1,19 @@
-$brown: #786A68;
-$beige: #FFE4DF;
+$brown: #786a68;
+$beige: #ffe4df;
 
-$light__blue: #85C6F4;
-$blue: #518ED0;
-$dark__blue: #1464C0;
-$darkest__blue: #0D47A1;
+$light__blue: #85c6f4;
+$blue: #518ed0;
+$dark__blue: #1464c0;
+$darkest__blue: #0d47a1;
 
 $white: #fff;
-$gray: #F0F0F0;
-$medium__gray: #CDD1DA;
+$gray: #f0f0f0;
+$medium__gray: #cdd1da;
 $dark__gray: #777;
 $black: #000;
 
-$light__red: #E57373;
-$red: #EF5350;
+$light__red: #e57373;
+$red: #ef5350;
 
-$green: #00897B;
-$light__green: #26A69A;
+$green: #00897b;
+$light__green: #26a69a;
