--- a/src/Components/ButtonOpenLink/style.scss
+++ b/src/Components/ButtonOpenLink/style.scss
@@ -1,30 +1,27 @@
-@import '../../colors.scss';
-@import "../../mixins.scss";
+@import "../../colors.scss";
 
-
-
-.button-browser{
-    flex-direction: column;
-    display: flex;
-    align-items: center;
-    border: none;
-    padding: 10px;
-    border-radius: .2em;
-    background: $blue;
-    color: $white;
-    cursor: pointer;
-    outline: none;
-    box-sizing: border-box;
-    font-size: 1.1rem;
-    text-decoration: none;
-    font-weight: 500;
-    transition: background 300ms ease-in-out ;
-    svg{
-        fill: $white;
-        width: 30px;
-        height: 30px;
-    }
-    &:hover{
-        background: $light__blue;
-    }
+.button-browser {
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  border: none;
+  padding: 10px;
+  border-radius: 0.2em;
+  background: $blue;
+  color: $white;
+  cursor: pointer;
+  outline: none;
+  box-sizing: border-box;
+  font-size: 1.1rem;
+  text-decoration: none;
+  font-weight: 500;
+  transition: background 300ms ease-in-out;
+  svg {
+    fill: $white;
+    width: 30px;
+    height: 30px;
+  }
+  &:hover {
+    background: $light__blue;
+  }
 }
