--- a/src/Pages/Qr-page/style.scss
+++ b/src/Pages/Qr-page/style.scss
@@ -3,7 +3,10 @@
 .page-qr {
   height: 100%;
   background: $gray;
-  &__reader-wrap {
+  &__wrap{
+    height: 100%;
+  }
+  &__reader {
     width: 100%;
     height: 100%;
     section {
@@ -11,7 +14,7 @@
       align-items: center;
       justify-content: center;
       width: 100%;
-      height: 100%;
+      height: 50%;
       section {
         overflow: hidden;
         width: 100%;
